--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pandas>=2.2.3",
     "plotly>=6.0.0",
     "polars>=1.21.0",
+    "pyobjc>=11.0",
     "rich>=13.9.4",
     "ruff>=0.10.0",
     "streamlit>=1.41.1",
