--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "streamlit-app-template"
+name = "1cijferho"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -11,7 +11,6 @@ dependencies = [
     "pandas>=2.2.3",
     "plotly>=6.0.0",
     "polars>=1.21.0",
-    "pyobjc>=11.0",
     "rich>=13.9.4",
     "ruff>=0.10.0",
     "streamlit>=1.41.1",
