--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ name = "1cijferho"
 version = "0.1.0"
 license = {text = "MIT"}
 description = "Professional tools for processing Dutch higher educational data (1CijferHO / ROD)"
-readme = "README.md"
+readme = "src/cijferho/README.md"
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Education",
@@ -30,6 +30,12 @@ dependencies = [
     "streamlit>=1.41.1",
     "streamlit-extras>=0.6.0",
     "xlsxwriter>=3.2.2",
+]
+[project.optional-dependencies]
+api = [
+    "fastapi>=0.115.0",
+    "uvicorn>=0.34.0",
+    "pydantic>=2.10.0"
 ]
 
 [project.urls]
