--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pandas>=2.2.3",
     "plotly>=6.0.0",
     "polars>=1.21.0",
+    "pyjanitor>=0.31.0",
     "rich>=13.9.4",
     "ruff>=0.10.0",
     "streamlit>=1.41.1",
