add: docker-compose file to enable postgres
note: we need the python package psycopg2, it fails when installing with
uv. therefore to test out src/streamlit_postgres_test.py we download
pandas and psycopg2 with pip3, and run the script with python3 and all
flags needed

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,8 @@
 {
   "name": "1CijferHO",
-  "build": { "dockerfile": "Dockerfile" },
+  "dockerComposeFile": "docker-compose.yaml",
+  "service": "app",
+  "workspaceFolder": "/workspace/vscode",
   "customizations": {
     "vscode": {
       "extensions": ["ms-python.python"]
@@ -8,6 +10,5 @@
   },
   "remoteUser": "ceda",
   "postCreateCommand": "uv sync",
-  "forwardPorts": [8501]
 }
 
